2013-07-08  Tassilo Horn  <tsdh@gnu.org>

	* gnus-registry.el (gnus-registry-remove-extra-data): New function.

2013-07-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-block-private-groups): Allow `global' methods to
	display images.

	* gnus.el (gnus-valid-select-methods): Mark nnrss as global.

	* message.el (message-cancel-news): According to
	<mailman.216.1372942181.12400.help-gnu-emacs@gnu.org>, "cancel" is
	preferred over "cmsg cancel" in the Subject.

	* nnir.el (nnir-engines): Note that the group specs are regexps
	(bug#13238).

	* gnus-msg.el (gnus-copy-article-buffer): If the article buffer has
	gotten read-only text properties, ensure that those aren't heeded when
	copying stuff over (bug#13434).

	* mm-view.el (mm-inline-text-html): Don't bug out on multipart messages
	(bug#13762).

2013-07-05  David Kastrup  <dak@gnu.org>

	* auth-source.el (auth-source-netrc-parse-one): Allow empty strings in
	authinfo file again (important for blank passwords).  This had been
	broken with 2013-06-15 change.

2013-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups):
	Revert 2013-01-14 change.

2013-07-02  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-epg-key-image): Use 'gnus-create-image' instead
	of 'create-image' for XEmacs compatibility; check errors when decoding
	image.  Reported by Uwe Brauer.

2013-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-extend-url-button): Make it work again with
	gnus-button-push revised at 2011-01-19.

2013-06-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el, shr.el, shr-color.el: Removed from the Gnus repository.  They
	now live in the lisp/net Emacs 24 repository.

2013-06-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-update-header-line-format): Quote % characters.

2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-process-text-input): Display passwords as asterisks.
