@@ -1,3 +1,8 @@
+2013-07-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* nnml.el (nnml-request-compact-group): Don't bug out if we can't
+	delete files (bug#13481).
+
 2013-07-08  Tassilo Horn  <tsdh@gnu.org>
 
 	* gnus-registry.el (gnus-registry-remove-extra-data): New function.
